--- a/server/client/src/index.css
+++ b/server/client/src/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=PT+Sans:400,700');
+
 body {
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif, 'PT Sans';
+	font-size: 12px;
 }
