--- a/server/client/src/App.css
+++ b/server/client/src/App.css
@@ -17,9 +17,18 @@
 .cent-hor {
   text-align: center; }
 
-.center {
+image .ui .container {
+  margin: auto !important; }
+
+.valign {
   vertical-align: middle;
   display: table-cell; }
 
+.margin5 {
+  margin: 5px; }
+
 .flexAll {
-  display: block; }
+  display: flex; }
+
+.float-right {
+  float: right; }
