--- a/server/client/src/App.sass
+++ b/server/client/src/App.sass
@@ -23,10 +23,18 @@ $sub-prim-color : rgba(0, 0, 0, .38)
 .cent-hor
   text-align: center
 
-.center
+image .ui .container
+  margin: auto !important
+
+.valign
   vertical-align: middle
   display: table-cell
 
+.margin5
+  margin: 5px
 
 .flexAll
-  display: block
+  display: flex
+
+.float-right
+  float : right
